# Music_Bot

./: .gitignore  Cargo.toml  LEARN.md  LICENSE  OBSTACLE.md  README.md
src/: connection_handler.rs  database_handler.rs  main.rs
src/command_handler/: command_data.rs  command_handler.rs  command_return.rs  mod.rs
src/command_handler/commands/: add_song.rs  check_queue.rs  connect.rs  disconnect.rs  help.rs  insert_queue.rs  launch.rs  mod.rs  play.rs  play_queue.rs  stat.rs
src/event_handler/: event_handler.rs
src/utils/: guild_queue.rs  mod.rs  play_info_notifier.rs  url_checker.rs
src/utils/audio_module/: dca.rs  metadata.rs  mod.rs  track_event_handler.rs  youtube_dl.rs
