[package]
name = "quiz_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde_json = "1.0.85"
serde = "1.0.145"
rand = "0.8.5"
regex = "1.6.0"
tokio-rusqlite = "0.3.0"
chrono = "0.4.22"
chrono-tz = "0.6.2"
serenity_utils = "0.7.0"
log = "0.4.17"
env_logger = "0.10.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.13", features = ["default", "json"] }
scraper = "0.13.0"
futures = "0.3.25"
url = "2.3.1"
audiopus_sys = "0.2.2"
songbird = { version = "0.3.0", features = ["driver", "gateway", "serenity-rustls", "yt-dlp"]}
lavalink-rs = {git = "https://gitlab.com/vicky5124/lavalink-rs",  branch = "master", features = ["rustls"]}

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.serenity]
default-features = true
features = ["builder", "chrono", "client", "gateway", "cache", "http", "model", "utils", "rustls_backend", "collector", "voice", "framework"]
version = "0.11.5"